# resourcerer

./: .gitignore  README.md  resourcerer.cabal  run-devel.sh  stack.yaml
app/: Main.hs
src-old/Web/: Resourcerer.hs
src-old/Web/Resourcerer/: Api.hs  Resource.hs
src-old/Web/Resourcerer/Serve/: Exceptions.hs  Responses.hs
src/Data/: SimpleParsers.hs
src/Data/Aeson/: Helpers.hs
src/Web/: Resourcerer.hs
src/Web/Resourcerer/: Api.hs  Hateoas.hs  Mime.hs  MultiDocument.hs  Resource.hs  Serve.hs
src/Web/Resourcerer/Serve/: Exceptions.hs  Responses.hs
