name: resourcerer
version: 0.1.0.0
synopsis: Initial project template from stack
description: Please see README.md
homepage: https://github.com/tdammers/resourcerer#readme
license: BSD3
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2016 Tobias Dammers
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Web.Resourcerer
                 , Web.Resourcerer.Resource
                 , Web.Resourcerer.Hateoas
                 , Web.Resourcerer.Serve
                 , Web.Resourcerer.Serve.Exceptions
                 , Web.Resourcerer.Serve.Responses
                 , Web.Resourcerer.Mime
                 , Data.Aeson.Helpers
                 , Data.SimpleParsers
  build-depends: base >= 4.7 && < 5
               , aeson
               , bytestring
               , data-default
               , http-types
               , mime-types
               , scientific
               , text
               , unordered-containers
               , utf8-string
               , wai
  default-language: Haskell2010

executable resourcerer-example
    hs-source-dirs: app
    main-is: Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends: base
                 , resourcerer
                 , bytestring
                 , aeson
                 , data-default
                 , http-types
                 , text
                 , unordered-containers
                 , utf8-string
                 , wai
                 , warp
    default-language: Haskell2010

test-suite resourcerer-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
               , resourcerer
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/tdammers/resourcerer
